--- a/style.css
+++ b/style.css
@@ -23,7 +23,6 @@ p {
 }
 
 .outer-container h2 {
-  text-align: center;
   font-size: 2.5rem;
 }
 
@@ -110,22 +109,24 @@ ul.hometab > li > a {
 }
 
 div.textehome {
-  position: absolute;
+  /* position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
-  margin: 100px 20px;
-
-  padding: 0;
+  transform: translate(-50%, -50%); */
+  padding: 50% 0% 0% 0%;
   border: 0;
   font-size: 2rem;
   color: ghostwhite;
   justify-content: center;
   align-items: center;
+  min-width: 1600px;
+  height: auto;
 }
 
 div.textehome h1 b {
   background-color: rgba(255, 166, 0, 0.74);
+  /* color:  rgba(255, 166, 0, 0.74); */
+  font-size: 5.5rem;
 }
 
 div.thefirst {
